Make minerva_site index page not terrible

--- a/minerva/index.html
+++ b/minerva/index.html
@@ -1,27 +1,49 @@
 <!doctype html>
 <html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>minerva_site</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<title>minerva_site</title>
+<style>
+h1 {
+	margin-top: 0;
+	font-size: 1.25em;
+}
+
+h1, h2, h3, body, li, p {
+	font-family: Arial, sans-serif;
+}
+
+li {
+	line-height: 1.5em;
+}
+</style>
 </head>
 <body>
+<h1>
+<img src="docs/website/logo-176x100.png" alt="minerva" height=59>_site index
+</h1>
 <ul>
-<li><a href="/js_minerva_tests.html">js_minerva tests</a>
-<li><a href="/docs/">/docs/</a>
-<li><a href="/@testres_Coreweb/">/@testres_Coreweb/</a>
-<li><a href="/@testres_Minerva/">/@testres_Minerva/</a>
+<li><a href="js_minerva_tests.html">js_minerva unit tests</a></li>
+<li><a href="docs/">docs/</a></li>
+<li><a href="chatapp/">chatapp/</a></li>
+<li><a href="chatapp/?mode=http">chatapp/?mode=http</a></li>
+<li>Not very useful pages
 	<ul>
-	<li><a href="/@testres_Minerva/DisplayConnections/">DisplayConnections/</a>
-	<li><a href="/@testres_Minerva/SimpleResponse/">SimpleResponse/</a>
-	<li><a href="/@testres_Minerva/UnicodeRainbow/?ranges=0-65535">UnicodeRainbow/?ranges=0-65535</a>
-	<li><a href="/@testres_Minerva/NoOriginHeader/">NoOriginHeader/</a>
-	<li><a href="/@testres_Minerva/GetEndpointInfo/">GetEndpointInfo/</a>
+	<li><a href="flashtest/">flashtest/</a> - tests Flash socket endpoint without using Minerva client code</li>
+	<li><a href="flashtest/?mode=http">flashtest/?mode=http</a></li>
+	<li><a href="@testres_Coreweb/">@testres_Coreweb/</a></li>
+	<li><a href="@testres_Minerva/">@testres_Minerva/</a>
+		<ul>
+		<li><a href="@testres_Minerva/DisplayConnections/">DisplayConnections/</a>
+		<li><a href="@testres_Minerva/SimpleResponse/">SimpleResponse/</a>
+		<li><a href="@testres_Minerva/UnicodeRainbow/?ranges=0-65535">UnicodeRainbow/?ranges=0-65535</a>
+		<li><a href="@testres_Minerva/NoOriginHeader/">NoOriginHeader/</a>
+		<li><a href="@testres_Minerva/GetEndpointInfo/">GetEndpointInfo/</a>
+		</ul>
+	</li>
+	<li><a href="form_sandbox/">form_sandbox/</a></li>
 	</ul>
-<li><a href="/form_sandbox/">/form_sandbox/</a>
-<li><a href="/chatapp/">/chatapp/</a>
-<li><a href="/chatapp/?mode=http">/chatapp/?mode=http</a>
-<li><a href="/flashtest/">/flashtest/</a>
-<li><a href="/flashtest/?mode=http">/flashtest/?mode=http</a>
+</li>
 </ul>
 </body>
 </html>
