--- a/minerva/flashtest/flashtest.html
+++ b/minerva/flashtest/flashtest.html
@@ -16,7 +16,7 @@ __demo_mainSocketPort = {{ htmldumps(mainSocketPort) }};
 </script>
 
 <div id="doc">
-This page tests Minerva server's HTTP and socket interfaces, without using the Minerva client.  This test page was created before the client.
+This page tests Minerva server's HTTP and socket interfaces, without using most of the Minerva client code.  This test page was created before the client was developed.
 
 <code>?mode=http</code> in the URL will make this test the HTTP interface instead of the socket interface.
 </div>
