Rename flashtest -> dumbtest.  It tests both HTTP and Flash.

--- a/minerva/index.html
+++ b/minerva/index.html
@@ -63,8 +63,8 @@ li {
 </li>
 <li>Not very useful pages
 	<ul>
-	<li><a href="flashtest/?mode=flash">flashtest/?mode=flash</a> - tests Flash socket endpoint without using most Minerva client code</li>
-	<li><a href="flashtest/?mode=http">flashtest/?mode=http</a> - tests HTTP endpoint without using most Minerva client code</li>
+	<li><a href="dumbtest/?mode=flash">dumbtest/?mode=flash</a> - tests Flash socket endpoint without using most Minerva client code</li>
+	<li><a href="dumbtest/?mode=http">dumbtest/?mode=http</a> - tests HTTP endpoint without using most Minerva client code</li>
 	<li><a href="@testres_Coreweb/">@testres_Coreweb/</a> - used by js_minerva_tests</li>
 	<li><a href="@testres_Minerva/">@testres_Minerva/</a>  - used by js_minerva_tests
 		<ul>
