minerva_site index: Link to the .xlsx and .pptx files as well

--- a/minerva/index.html
+++ b/minerva/index.html
@@ -34,8 +34,9 @@ li {
 			<li><a href="docs/website/tutorial/withclosure.html">Tutorial: Minerva with Closure Library</a></li>
 			</ul>
 		</li>
-		<li><a href="docs/website/data_flow.png">A sketch of how Minerva works</a></li>
-		<li><a href="docs/website/protocol.htm">The frame types used by the Minerva protocol</a></li>
+		<li><a href="docs/website/data_flow.png">A sketch of how Minerva works</a> (also <a href="docs/website/data_flow.pptx">.pptx format</a>)</li>
+		<li><a href="docs/website/protocol.htm">The frame types used by the Minerva protocol</a>
+			(also <a href="docs/website/protocol.xlsx">.xlsx format</a>)</li>
 		</ul>
 	</li>
 	<li><a href="docs/Glossary.rst">Glossary</a></li>
