Generate docs/*.html using rst2html; make build_docs use sh instead of zsh; resurrect docs/style.css

--- a/minerva/index.html
+++ b/minerva/index.html
@@ -26,7 +26,6 @@ li {
 <li><a href="js_minerva_tests.html">js_minerva unit tests</a></li>
 <li>Documentation
 	<ul>
-	<!-- TODO: .rst -> .html and link .html here -->
 	<li><a href="docs/website/">Minerva website</a>, as you would find at <a href="http://ludios.org/minerva/">ludios.org/minerva</a>
 		<ul>
 		<li><a href="docs/website/tutorial/">Tutorial index</a>
@@ -39,10 +38,10 @@ li {
 			(also <a href="docs/website/protocol.xlsx">.xlsx format</a>)</li>
 		</ul>
 	</li>
-	<li><a href="docs/Glossary.rst">Glossary</a></li>
-	<li><a href="docs/Rationales.rst">Rationales / Minerva design minutiae</a></li>
-	<li><a href="docs/Debugging.rst">Manually debugging Minerva's ports</a></li>
-	<li><a href="docs/Producers.rst">Minerva's (incomplete) server-side producers/consumers</a></li>
+	<li><a href="docs/Glossary.html">Glossary</a></li>
+	<li><a href="docs/Rationales.html">Rationales / Minerva design minutiae</a></li>
+	<li><a href="docs/Debugging.html">Manually debugging Minerva's ports</a></li>
+	<li><a href="docs/Producers.html">Minerva's (incomplete) server-side producers/consumers</a></li>
 	</ul>
 </li>
 <li>chatapp test page using Closure Library
