Fix several issues:
* Fix RealFlashSocketTests for new Minerva SocketEndpoint API

* Don't load multiple FlashConnector.swf objects if a second Stream
  is created before the first has finished loading FlashConnector.swf

* Don't throw an exception if user tries to send a string while in
  state_ WAITING_RESOURCES

--- a/minerva/js_minerva_tests.html
+++ b/minerva/js_minerva_tests.html
@@ -13,6 +13,8 @@ div, p, body {
 }
 </style>
 
+<div id="minerva-elements"></div>
+
 <a href="#" onclick="TestRunnerPage.toggleVisibility('TestRunnerPage-log');return false">Show/hide debug log</a><br>
 
 <div id="TestRunnerPage-log" style="background-color:#ddd;display:none"></div>
