Rename newlink.Stream -> ServerStream; fix many comments that mention Stream/ServerStream/ClientStream/stream

--- a/minerva/chatapp/chatapp.html
+++ b/minerva/chatapp/chatapp.html
@@ -61,7 +61,7 @@ Do all of these when testing:
 <li>For mode=flash : Arrive to this page via Back button from another page.  Opera has problems related to this.</li>
 <li>Load the page in a WebKit browser, make sure the spinner stops spinning after 4 seconds.</li>
 <li>If the browser loads Flash out-of-process, kill the plugin container process
-	and make sure Minerva keeps working (though Stream may reset).
+	and make sure Minerva keeps working (though ClientStream may reset).
 	In Firefox, kill plugin-container.exe.  In Chrome, use shift-Esc and end the Flash process.</li>
 </ul>
 
