Rename IMinervaProtocol to IStringProtocol; rename IMinervaFactory to IStringFactory; rename some mocks.
This is intended to reduce confusion, as IMinervaProtocol has nothing
to do with "the Minerva protocol" (that is, the wire level protocol.)

--- a/minerva/chatapp/chatapp.html
+++ b/minerva/chatapp/chatapp.html
@@ -119,7 +119,7 @@ goog.require('goog.Uri');
 goog.require('cw.eventual');
 goog.require('cw.string');
 goog.require('cw.net.ClientStream');
-goog.require('cw.net.IMinervaProtocol');
+goog.require('cw.net.IStringProtocol');
 goog.require('cw.net.HttpStreamingMode');
 goog.require('cw.net.demo.getEndpointByQueryArgs');
 goog.require('cw.repr');
@@ -201,7 +201,7 @@ window.onerror = function(msg, url, lineNumber) {
 
 
 /**
- * @implements {cw.net.IMinervaProtocol}
+ * @implements {cw.net.IStringProtocol}
  * @constructor
  */
 chatapp.ChatProtocol = function() {};
