Add TestQAN to js_minerva_tests.html

--- a/minerva/js_minerva_tests.html
+++ b/minerva/js_minerva_tests.html
@@ -24,6 +24,7 @@ div, p, body {
 <script>
 TestRunnerPage.modules = [
 	 "cw.net.TestDecoders"
+	,"cw.net.TestQAN"
 	,"cw.net.TestXDRTracker"
 	,"cw.net.TestWindow"
 	,"cw.net.TestFrames"
