Link to new .rst tutorial; remove old HTML tutorial

--- a/minerva/index.html
+++ b/minerva/index.html
@@ -28,16 +28,12 @@ li {
 	<ul>
 	<li><a href="docs/website/">Minerva website</a>, as you would find at <a href="http://ludios.org/minerva/">ludios.org/minerva</a>
 		<ul>
-		<li><a href="docs/website/tutorial/">Tutorial index</a>
-			<ul>
-			<li><a href="docs/website/tutorial/withclosure.html">Tutorial: Minerva with Closure Library</a></li>
-			</ul>
-		</li>
 		<li><a href="docs/website/data_flow.png">A sketch of how Minerva works</a> (also <a href="docs/website/data_flow.pptx">.pptx format</a>)</li>
 		<li><a href="docs/website/protocol.htm">The frame types used by the Minerva protocol</a>
 			(also <a href="docs/website/protocol.xlsx">.xlsx format</a>)</li>
 		</ul>
 	</li>
+	<li><a href="docs/TutorialWithClosure.html">(incomplete) Tutorial: Minerva with Closure Library</a></li>
 	<li><a href="docs/Glossary.html">Glossary</a></li>
 	<li><a href="docs/Rationales.html">Rationales / Minerva design minutiae</a></li>
 	<li><a href="docs/Debugging.html">Manually debugging Minerva's ports</a></li>
